--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
   "homepage": "https://github.com/KirillKotyunin/ksucta-shop#readme",
   "devDependencies": {
     "gulp": "^4.0.2",
-    "gulp-pug": "^4.0.1"
+    "gulp-csso": "^4.0.1",
+    "gulp-load-plugins": "^2.0.3",
+    "gulp-pug": "^4.0.1",
+    "gulp-sass": "^4.1.0"
   }
 }
