--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "gulp-autoprefixer": "^7.0.1",
     "gulp-csso": "^4.0.1",
     "gulp-load-plugins": "^2.0.3",
+    "gulp-notify": "^3.2.0",
     "gulp-pug": "^4.0.1",
-    "gulp-sass": "^4.1.0"
+    "gulp-sass": "^4.1.0",
+    "gulp-sourcemaps": "^2.6.5"
   }
 }
