--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "gulp-notify": "^3.2.0",
     "gulp-pug": "^4.0.1",
     "gulp-sass": "^4.1.0",
-    "gulp-sourcemaps": "^2.6.5"
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-tinypng": "^1.0.2"
   },
   "dependencies": {
     "jquery": "^3.5.1",
