--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp-tinypng": "^1.0.2"
   },
   "dependencies": {
+    "bootstrap-scss": "^4.5.0",
     "jquery": "^3.5.1",
     "slick-carousel": "^1.8.1"
   }
